# GTest

./: CMakeLists.txt  tests.cpp  whattotest.cpp  whattotest.hpp
